Minor visual fixes
Don't use vw, doesn't include scrollbars
Fix some selectors that use buttons now instead of divs

--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -15,8 +15,12 @@ html.enhancer-fullVideo.page-video {
     width: 100vw !important;
     max-height: 100vh !important;
     min-height: 100vh !important;
-    max-width: 100vw !important;
-    min-width: 100vw !important;
+    max-width: 100% !important;
+    margin: 0 !important;
+    
+    &, video, .video-poster {
+      border-radius: 0 !important;
+    }
   }
 
   #NebulaApp > div:first-of-type {
@@ -62,7 +66,7 @@ html.enhancer-fullVideo.page-video {
   margin-left: -40px;
 }
 
-div.enhancer-queueButton {
+.enhancer-queueButton {
   top: 24px;
   bottom: unset;
   line-height: 0;
@@ -138,19 +142,6 @@ div.nebula-watch-later {
 
     svg:first-child {
       display: unset;
-    }
-  }
-}
-
-a.enhancer-queueButtonAll {
-  svg {
-    width: 12px;
-    height: 12px;
-
-    #main,
-    #outline {
-      fill: white;
-      fill: currentcolor;
     }
   }
 }
@@ -275,7 +266,7 @@ div.enhancer-tooltip {
   }
 }
 
-div.enhancer-volume {
+.enhancer-volume {
   transition: width 0.25s ease-in-out;
   overflow: hidden;
   margin-right: -8px;
@@ -293,8 +284,8 @@ div.enhancer-volume {
   }
 }
 
-div#volume-controller-conditional,
-div#volume-controller {
+#volume-controller-conditional,
+#volume-controller {
   .volume-slider-container {
     transition: opacity 0.4s ease-in-out 0.1s, margin-right 0.2s ease-in-out;
   }
@@ -310,7 +301,7 @@ div#volume-controller {
   }
 }
 
-div#volume-controller {
+#volume-controller {
   width: calc(33px + 3.5em);
 
   .volume-slider-container {
@@ -318,14 +309,14 @@ div#volume-controller {
   }
 }
 
-div.enhancer-time {
+.enhancer-time {
   &.enhancer-hide-remaining .enhancer-time-remaining,
   &.enhancer-hide-current .enhancer-time-current {
     display: none;
   }
 }
 
-div.enhancer-queue-control {
+.enhancer-queue-control {
   &.disabled {
     pointer-events: none;
     opacity: 0.4;
@@ -355,4 +346,17 @@ button.enhancer-hidden {
 
 body > .watch-on-nebula {
   display: none !important;
+}
+
+a.enhancer-queueButtonAll {
+  svg {
+    width: 12px;
+    height: 12px;
+
+    #main,
+    #outline {
+      fill: white;
+      fill: currentcolor;
+    }
+  }
 }
